# mcp-library-server

./: .gitignore  CLAUDE.md  README.md  README_STANDALONE.md  USER_GUIDE.md  USER_GUIDE_STANDALONE.md  config.yaml  pyproject.toml  requirements.txt  server.py  setup-uv.sh
.github/workflows/: test.yml
data/processed/: chip-huyen-designing-machine-learning-systems.json
scripts/: index_books.py  setup.py  test_components.py  test_search.py  test_without_ollama.py
src/: __init__.py
src/embeddings/: __init__.py  embeddings.py
src/generation/: __init__.py  ollama_client.py
src/parsers/: __init__.py  epub_parser.py
src/search/: __init__.py  vector_store.py
src/utils/: config.py
tests/: conftest.py  test_config.py  test_embeddings.py  test_epub_parser.py  test_integration.py  test_ollama_client.py  test_server.py  test_vector_store.py
tests/test_data/: sample_config.yaml  sample_processed_book.json
